Fix vertical alignment of light switches in condition rules

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -3402,6 +3402,7 @@ ul.tree,
 
   & > .rule-body {
     .lightswitch {
+      margin-top: 6px;
       display: block;
     }
   }
